--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 2</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/normalize.css">
 </head>
 <body>
     <div class="container">
@@ -14,7 +15,10 @@
             <li><a href ="#" target="_blank">Portfolio</a></li>
             <li><a href ="#" target="_blank">Contact</a></li></ul></nav>
         </div>
+        <div class="intro">
     <img class="picture" src="images/responsive-layout-profile.png" alt="Profile picture">
+    <p>Hi! I'm a front end developer who loves responsive design and css. I recently finished learning front-end web development at Treehouse and I am excited to put all my skills to use!</p>
+</div>
 
   
 
