Google font added

--- a/index.html
+++ b/index.html
@@ -5,21 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 2</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/normalize.css">
 </head>
 <body>
-    <div class="container">
-        <h1 class="name">Khaydien Anderson</h1>
-        <ul class="main-nav"><li class="home"><a href ="#" target="_blank"></a>Home</a></li>
-            <li><a href ="#" target="_blank">Portfolio</a></li>
-            <li><a href ="#" target="_blank">Contact</a></li></ul></nav>
-        </div>
-        <div class="intro">
-    <img class="picture" src="images/responsive-layout-profile.png" alt="Profile picture">
-    <p>Hi! I'm a front end developer who loves responsive design and css. I recently finished learning front-end web development at Treehouse and I am excited to put all my skills to use!</p>
+    <header>
+                <div class="container">
+                    <h1 class="name">Khaydien Anderson</h1>
+                    <ul class="main-nav"><li class="home"><a href ="#" target="_blank"></a>Home</a></li>
+                        <li><a href ="#" target="_blank">Portfolio</a></li>
+                        <li><a href ="#" target="_blank">Contact</a></li></ul></nav>
+                    </div>
+                    <div class="intro">
+                <img class="picture" src="images/responsive-layout-profile.png" alt="Profile picture">
+                <p>Hi! I'm a front end developer who loves responsive design and css. I recently finished learning front-end web development at Treehouse and I am excited to put all my skills to use!</p>
+</header>
 </div>
+<main>
 
+</main>
   
 
 
