--- a/index.html
+++ b/index.html
@@ -21,10 +21,16 @@
                     <div class="intro">
                 <img class="picture" src="images/responsive-layout-profile.png" alt="Profile picture">
                 <p>Hi! I'm a front end developer who loves responsive design and css. I recently finished learning front-end web development at Treehouse and I am excited to put all my skills to use!</p>
-</header>
+</header> 
 </div>
 <main>
+<div class="portfolio">
+    <h2>Portfolio</h2>
+    <img src="images/portfolio-1.png" alt="Marketing picture.">
+            <h3 class="portitle">Marketing Page</h3><p>This project shows the front page of a marketing website meant for a specifific business I'm interesting in.</p>
+    
 
+</div>
 </main>
   
 
