mobile first approach 1

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <header>
                 <div class="container">
                     <h1 class="name">Khaydien Anderson</h1>
-                    <ul class="main-nav"><li class="home"><a href ="#" target="_blank"></a>Home</a></li>
-                        <li><a href ="#" target="_blank">Portfolio</a></li>
-                        <li><a href ="#" target="_blank">Contact</a></li></ul></nav>
+                    <ul class="main-nav"><li class="nav"><a href ="#" target="_blank"></a>Home</a></li>
+                        <li class="nav"><a href ="#" target="_blank">Portfolio</a></li>
+                        <li class="nav"><a href ="#" target="_blank">Contact</a></li></ul></nav>
                     </div>
                     <div class="intro">
                 <img class="picture" src="images/responsive-layout-profile.png" alt="Profile picture">
@@ -24,10 +24,10 @@
 </header> 
 </div>
 <main>
-<div class="portfolio">
+<div class="title portfolio">
     <h2>Portfolio</h2>
-    <img src="images/portfolio-1.png" alt="Marketing picture.">
-            <h3 class="portitle">Marketing Page</h3><p>This project shows the front page of a marketing website meant for a specifific business I'm interesting in.</p>
+    <img class ="picture" src="images/portfolio-1.png" alt="Marketing picture.">
+            <h3 class="title">Marketing Page</h3><p>This project shows the front page of a marketing website meant for a specifific business I'm interesting in.</p>
     
 
 </div>
