content centered for mobile

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
                 <div class="container">
-                    <h1 class="name">Khaydien Anderson</h1>
+                    <h1 class="name">Student normalize</h1>
                     <ul class="main-nav"><li class="nav"><a href ="#" target="_blank"></a>Home</a></li>
                         <li class="nav"><a href ="#" target="_blank">Portfolio</a></li>
                         <li class="nav"><a href ="#" target="_blank">Contact</a></li></ul></nav>
@@ -24,12 +24,27 @@
 </header> 
 </div>
 <main>
-<div class="title portfolio">
-    <h2>Portfolio</h2>
-    <img class ="picture" src="images/portfolio-1.png" alt="Marketing picture.">
-            <h3 class="title">Marketing Page</h3><p>This project shows the front page of a marketing website meant for a specifific business I'm interesting in.</p>
-    
-
+    <div class="portfolio">
+        <h2 class="name" >Portfolio</h2>
+        <img class= "picture" src="images/portfolio-1.png" alt="Marketing picture.">
+        <h3 class="portitle">Marketing Page</h3><p>This project shows the front page of a marketing website meant for a specifific business I'm interesting in.</p>
+        <img class= "picture" src="images/portfolio-2.png" alt="Search Page picture">
+        <h3 class="portitle">Marketing Page</h3><p>This project shows the front page of a marketing website meant for a specifific business I'm interesting in.</p>
+        <img class= "picture" src="images/portfolio-3.png" alt="Travel app picture.">
+        <h3 class="portitle">Marketing Page</h3><p>This project shows the front page of a marketing website meant for a specifific business I'm interesting in.</p>
+        <img class= "picture" src="images/portfolio-4.png" alt="Maps of favorite spots picture">
+        <h3 class="portitle">Marketing Page</h3><p>This project shows the front page of a marketing website meant for a specifific business I'm interesting in.</p>
+        <img class= "picture" src="images/portfolio-5.png" alt="Photo gallery.">
+        <h3 class="portitle">Marketing Page</h3><p>This project shows the front page of a marketing website meant for a specifific business I'm interesting in.</p>
+        <img class= "picture" src="images/portfolio-6.png" alt="Calculator">
+        <h3 class="portitle">Marketing Page</h3><p>This project shows the front page of a marketing website meant for a specifific business I'm interesting in.</p>
+</div>
+</div>
+<div class="Contact">
+<h2 class="title"> Contact</h2>
+<p>If you're interested in chatting or want more information about what I've been working on, I'd love to hear from you! <br>
+Phone: 07943511096 <br>
+Email: Kdnanderson94@gmail.com </p>
 </div>
 </main>
   
