--- a/index.html
+++ b/index.html
@@ -47,11 +47,12 @@ Phone: 07943511096 <br>
 Email: Kdnanderson94@gmail.com </p>
 </div>
 </main>
-  
-
-
-<footer>
-
+  <hr>
+<footer class="main-footer">
+    <ul>
+<span><li class="footer-select">Khaydien Anderson</li>
+<a id="back-top" href="#top"><li class="footer-select">Back to top</a></li></span>
+</ul>
 </footer>
 </body>
 </html>
