--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <header>
                 <div class="container">
                     <h1 class="name">Student normalize</h1>
-                    <ul class="main-nav"><li class="nav"><a href ="#" target="_blank"></a>Home</a></li>
-                        <li class="nav"><a href ="#" target="_blank">Portfolio</a></li>
-                        <li class="nav"><a href ="#" target="_blank">Contact</a></li></ul></nav>
+                    <ul class="main-nav"><li class="nav"><a href ="index.html" ></a>Home</a></li>
+                        <li class="nav"><a href ="#portfolio-id" >Portfolio</a></li>
+                        <li class="nav"><a href ="#contact-id">Contact</a></li></ul></nav>
                     </div>
                     <div class="intro">
                 <img class="picture" src="images/responsive-layout-profile.png" alt="Profile picture">
@@ -24,23 +24,23 @@
 </header> 
 </div>
 <main>
-    <div class="portfolio">
-        <h2 class="name" >Portfolio</h2>
+    <div class="portfolio" id="portfolio-id">
+        <h2 class="title" >Portfolio</h2>
         <img class= "picture" src="images/portfolio-1.png" alt="Marketing picture.">
         <h3 class="portitle">Marketing Page</h3><p>This project shows the front page of a marketing website meant for a specifific business I'm interesting in.</p>
         <img class= "picture" src="images/portfolio-2.png" alt="Search Page picture">
-        <h3 class="portitle">Marketing Page</h3><p>This project shows the front page of a marketing website meant for a specifific business I'm interesting in.</p>
+        <h3 class="portitle">Search Page</h3><p>This project searches through a specific database to find information that the user is trying to look up.</p>
         <img class= "picture" src="images/portfolio-3.png" alt="Travel app picture.">
-        <h3 class="portitle">Marketing Page</h3><p>This project shows the front page of a marketing website meant for a specifific business I'm interesting in.</p>
+        <h3 class="portitle">Travel App</h3><p>This project compares travel times based on different transportation methods and tells you the best one.</p>
         <img class= "picture" src="images/portfolio-4.png" alt="Maps of favorite spots picture">
-        <h3 class="portitle">Marketing Page</h3><p>This project shows the front page of a marketing website meant for a specifific business I'm interesting in.</p>
+        <h3 class="portitle">Map of favorite spots</h3><p>This project uses mapping apis to plot points for my favorite spots in the city for a do-it-yourself walking tour.</p>
         <img class= "picture" src="images/portfolio-5.png" alt="Photo gallery.">
-        <h3 class="portitle">Marketing Page</h3><p>This project shows the front page of a marketing website meant for a specifific business I'm interesting in.</p>
+        <h3 class="portitle">Photo Gallery</h3><p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
         <img class= "picture" src="images/portfolio-6.png" alt="Calculator">
-        <h3 class="portitle">Marketing Page</h3><p>This project shows the front page of a marketing website meant for a specifific business I'm interesting in.</p>
+        <h3 class="portitle">Calculator</h3><p>Someone can enter in the numbers they want, and press the big blue button and get the result.</p>
 </div>
 </div>
-<div class="Contact">
+<div class="contact" id="contact-id">
 <h2 class="title"> Contact</h2>
 <p>If you're interested in chatting or want more information about what I've been working on, I'd love to hear from you! <br>
 Phone: 07943511096 <br>
