Mobile first complete (320px)

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                         <li class="nav"><a href ="#contact-id">Contact</a></li></ul></nav>
                     </div>
                     <div class="intro">
-                <img class="picture" src="images/responsive-layout-profile.png" alt="Profile picture">
+                <img class="intro-picture" src="images/responsive-layout-profile.png" alt="Profile picture">
                 <p>Hi! I'm a front end developer who loves responsive design and css. I recently finished learning front-end web development at Treehouse and I am excited to put all my skills to use!</p>
 </header> 
 </div>
@@ -37,14 +37,14 @@
         <img class= "picture" src="images/portfolio-5.png" alt="Photo gallery.">
         <h3 class="portitle">Photo Gallery</h3><p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
         <img class= "picture" src="images/portfolio-6.png" alt="Calculator">
-        <h3 class="portitle">Calculator</h3><p>Someone can enter in the numbers they want, and press the big blue button and get the result.</p>
+        <h3 class="portitle">Calculator</h3><p>Someone can enter in the numbers they want, and press the big blue button and get the result.</p> <br>
 </div>
 </div>
 <div class="contact" id="contact-id">
 <h2 class="title"> Contact</h2>
-<p>If you're interested in chatting or want more information about what I've been working on, I'd love to hear from you! <br>
-Phone: 07943511096 <br>
-Email: Kdnanderson94@gmail.com </p>
+<p>If you're interested in chatting or want more information about what I've been working on, I'd love to hear from you! <br> <br>
+Phone: <strong>07943511096</strong> <br>
+Email: <strong><a href="mailto:kdnanderson94@gmail.com" >Kdnanderson94@gmail.com</a></strong> </p>
 </div>
 </main>
   <hr>
