media queries added

--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@ Email: <strong><a href="mailto:kdnanderson94@gmail.com" >Kdnanderson94@gmail.com
     <ul>
 <span><li class="footer-select">Khaydien Anderson</li>
 <a id="back-top" href="#top"><li class="footer-select">Back to top</a></li></span>
+
+<ul class="bottom-nav"><li class="nav"><a href ="index.html" ></a>Home</a></li>
+    <li class="nav"><a href ="#portfolio-id" >Portfolio</a></li>
+    <li class="nav"><a href ="#contact-id">Contact</a></li></ul></nav>
+
 </ul>
 </footer>
 </body>
