--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
                 <div class="container">
                     <h1 class="name">Student normalize</h1>
-                    <ul class="main-nav"><li class="nav"><a href ="index.html" ></a>Home</a></li>
+                    <ul class="main-nav"><li class="nav"><a href ="index.html" >Home</a></li>
                         <li class="nav"><a href ="#portfolio-id" >Portfolio</a></li>
                         <li class="nav"><a href ="#contact-id">Contact</a></li></ul></nav>
                     </div>
@@ -53,7 +53,7 @@ Email: <strong><a href="mailto:kdnanderson94@gmail.com" >Kdnanderson94@gmail.com
 <span><li class="footer-select">Khaydien Anderson</li>
 <a id="back-top" href="#top"><li class="footer-select">Back to top</a></li></span>
 
-<ul class="bottom-nav"><li class="nav"><a href ="index.html" ></a>Home</a></li>
+<ul class="bottom-nav"><li class="nav"><a href ="index.html">Home</a></li>
     <li class="nav"><a href ="#portfolio-id" >Portfolio</a></li>
     <li class="nav"><a href ="#contact-id">Contact</a></li></ul></nav>
 
