--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
                 <div class="container">
-                    <h1 class="name">Student normalize</h1>
+                    <h1 class="name">Student Name</h1>
                     <ul class="main-nav"><li class="nav"><a href ="index.html" >Home</a></li>
                         <li class="nav"><a href ="#portfolio-id" >Portfolio</a></li>
                         <li class="nav"><a href ="#contact-id">Contact</a></li></ul></nav>
@@ -26,17 +26,17 @@
 <main>
     <div class="portfolio" id="portfolio-id">
         <h2 class="title" >Portfolio</h2>
-        <img class= "picture" src="images/portfolio-1.png" alt="Marketing picture.">
+        <img class= "picture pic1" src="images/portfolio-1.png" alt="Marketing picture.">
         <h3 class="portitle">Marketing Page</h3><p>This project shows the front page of a marketing website meant for a specifific business I'm interesting in.</p>
-        <img class= "picture" src="images/portfolio-2.png" alt="Search Page picture">
+        <img class= "picture pic2" src="images/portfolio-2.png" alt="Search Page picture">
         <h3 class="portitle">Search Page</h3><p>This project searches through a specific database to find information that the user is trying to look up.</p>
-        <img class= "picture" src="images/portfolio-3.png" alt="Travel app picture.">
+        <img class= "picture pic1" src="images/portfolio-3.png" alt="Travel app picture.">
         <h3 class="portitle">Travel App</h3><p>This project compares travel times based on different transportation methods and tells you the best one.</p>
-        <img class= "picture" src="images/portfolio-4.png" alt="Maps of favorite spots picture">
+        <img class= "picture pic2" src="images/portfolio-4.png" alt="Maps of favorite spots picture">
         <h3 class="portitle">Map of favorite spots</h3><p>This project uses mapping apis to plot points for my favorite spots in the city for a do-it-yourself walking tour.</p>
-        <img class= "picture" src="images/portfolio-5.png" alt="Photo gallery.">
+        <img class= "picture pic1" src="images/portfolio-5.png" alt="Photo gallery.">
         <h3 class="portitle">Photo Gallery</h3><p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
-        <img class= "picture" src="images/portfolio-6.png" alt="Calculator">
+        <img class= "picture pic2" src="images/portfolio-6.png" alt="Calculator">
         <h3 class="portitle">Calculator</h3><p>Someone can enter in the numbers they want, and press the big blue button and get the result.</p> <br>
 </div>
 </div>
@@ -49,13 +49,13 @@ Email: <strong><a href="mailto:kdnanderson94@gmail.com" >Kdnanderson94@gmail.com
 </main>
   <hr>
 <footer class="main-footer">
-    <ul>
-<span><li class="footer-select">Khaydien Anderson</li>
+    
+<span><p class="footer-select">Khaydien Anderson</p>
 <a id="back-top" href="#top"><li class="footer-select">Back to top</a></li></span>
 
-<ul class="bottom-nav"><li class="nav"><a href ="index.html">Home</a></li>
+<ul class="bottom-nav"><li class="nav"><a href ="#contact-id">Contact</a></li>
     <li class="nav"><a href ="#portfolio-id" >Portfolio</a></li>
-    <li class="nav"><a href ="#contact-id">Contact</a></li></ul></nav>
+    <li class="nav"><a href ="index.html">Home</a></li></ul></nav>
 
 </ul>
 </footer>
