--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@ Email: <strong><a href="mailto:kdnanderson94@gmail.com" >Kdnanderson94@gmail.com
   <hr>
 <footer class="main-footer">
     
-<span><p class="footer-select">Khaydien Anderson</p>
-<a id="back-top" href="#top"><li class="footer-select">Back to top</a></li></span>
+<span><p>Khaydien Anderson</p>
+<a href="#top">Back to top</a></span>
 
 <ul class="bottom-nav"><li class="nav"><a href ="#contact-id">Contact</a></li>
     <li class="nav"><a href ="#portfolio-id" >Portfolio</a></li>
