--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
                 <div class="container">
-                    <h1 class="name">Student Name</h1>
+                    <h1 class="name">Student Name</h1><nav>
                     <ul class="main-nav"><li class="nav"><a href ="index.html" >Home</a></li>
                         <li class="nav"><a href ="#portfolio-id" >Portfolio</a></li>
                         <li class="nav"><a href ="#contact-id">Contact</a></li></ul></nav>
@@ -21,25 +21,37 @@
                     <div class="intro">
                 <img class="intro-picture" src="images/responsive-layout-profile.png" alt="Profile picture">
                 <p>Hi! I'm a front end developer who loves responsive design and css. I recently finished learning front-end web development at Treehouse and I am excited to put all my skills to use!</p>
-</header> 
-</div>
+            </div>
+        </header>
 <main>
     <div class="portfolio">
         <h2 class="title" >Portfolio</h2>
+    <div class="cards">
         <img class= "pics" src="images/portfolio-1.png" alt="Marketing picture.">
         <h3 class="portitle">Marketing Page</h3><p>This project shows the front page of a marketing website meant for a specifific business I'm interesting in.</p>
+            </div>  
+    <div class="cards">
         <img class= "pics" src="images/portfolio-2.png" alt="Search Page picture">
         <h3 class="portitle">Search Page</h3><p>This project searches through a specific database to find information that the user is trying to look up.</p>
+            </div>
+    <div class="cards">
         <img class= "pics" src="images/portfolio-3.png" alt="Travel app picture.">
         <h3 class="portitle">Travel App</h3><p>This project compares travel times based on different transportation methods and tells you the best one.</p>
+    </div> 
+    <div class="cards">
         <img class= "pics" src="images/portfolio-4.png" alt="Maps of favorite spots picture">
         <h3 class="portitle">Map of favorite spots</h3><p>This project uses mapping apis to plot points for my favorite spots in the city for a do-it-yourself walking tour.</p>
+    </div>
+    <div class="cards">
         <img class= "pics" src="images/portfolio-5.png" alt="Photo gallery.">
         <h3 class="portitle">Photo Gallery</h3><p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
+    </div>
+    <div class="cards">
         <img class= "pics" src="images/portfolio-6.png" alt="Calculator">
         <h3 class="portitle">Calculator</h3><p>Someone can enter in the numbers they want, and press the big blue button and get the result.</p> <br>
-</div>
-</div>
+    </div>
+</div> <!-- portfolio closing tag-->
+
 <div class="contact" id="contact-id">
 <h2 class="title"> Contact</h2>
 <p>If you're interested in chatting or want more information about what I've been working on, I'd love to hear from you! <br> <br>
@@ -50,14 +62,13 @@ Email: <strong><a href="mailto:kdnanderson94@gmail.com" >Kdnanderson94@gmail.com
   <hr>
 <footer class="main-footer">
     
-<span><p>Khaydien Anderson</p>
+<span>Khaydien Anderson
 <a href="#top">Back to top</a></span>
 
 <ul class="bottom-nav"><li class="nav"><a href ="#contact-id">Contact</a></li>
     <li class="nav"><a href ="#portfolio-id" >Portfolio</a></li>
-    <li class="nav"><a href ="index.html">Home</a></li></ul></nav>
+    <li class="nav"><a href ="index.html">Home</a></li></ul>
 
-</ul>
 </footer>
 </body>
 </html>
