--- a/index.html
+++ b/index.html
@@ -26,27 +26,27 @@
 <main>
     <div class="portfolio">
         <h2 class="title" >Portfolio</h2>
-    <div class="cards">
+    <div class="cards c1">
         <img class= "pics" src="images/portfolio-1.png" alt="Marketing picture.">
         <h3 class="portitle">Marketing Page</h3><p>This project shows the front page of a marketing website meant for a specifific business I'm interesting in.</p>
             </div>  
-    <div class="cards">
+    <div class="cards c2 ">
         <img class= "pics" src="images/portfolio-2.png" alt="Search Page picture">
         <h3 class="portitle">Search Page</h3><p>This project searches through a specific database to find information that the user is trying to look up.</p>
             </div>
-    <div class="cards">
+    <div class="cards c3">
         <img class= "pics" src="images/portfolio-3.png" alt="Travel app picture.">
         <h3 class="portitle">Travel App</h3><p>This project compares travel times based on different transportation methods and tells you the best one.</p>
     </div> 
-    <div class="cards">
+    <div class="cards c4">
         <img class= "pics" src="images/portfolio-4.png" alt="Maps of favorite spots picture">
         <h3 class="portitle">Map of favorite spots</h3><p>This project uses mapping apis to plot points for my favorite spots in the city for a do-it-yourself walking tour.</p>
     </div>
-    <div class="cards">
+    <div class="cards c5">
         <img class= "pics" src="images/portfolio-5.png" alt="Photo gallery.">
         <h3 class="portitle">Photo Gallery</h3><p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
     </div>
-    <div class="cards">
+    <div class="cards c6">
         <img class= "pics" src="images/portfolio-6.png" alt="Calculator">
         <h3 class="portitle">Calculator</h3><p>Someone can enter in the numbers they want, and press the big blue button and get the result.</p> <br>
     </div>
