1st draft complete

--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
             </div>
         </header>
 <main>
-    <div class="portfolio">
+    <div class="portfolio-container">
         <h2 class="title" >Portfolio</h2>
+    <div class="portfolio">
+        
     <div class="cards c1">
         <img class= "pics" src="images/portfolio-1.png" alt="Marketing picture.">
         <h3 class="portitle">Marketing Page</h3><p>This project shows the front page of a marketing website meant for a specifific business I'm interesting in.</p>
@@ -51,6 +53,7 @@
         <h3 class="portitle">Calculator</h3><p>Someone can enter in the numbers they want, and press the big blue button and get the result.</p> <br>
     </div>
 </div> <!-- portfolio closing tag-->
+</div> <!--portfolio container closing tag-->
 
 <div class="contact" id="contact-id">
 <h2 class="title"> Contact</h2>
@@ -63,7 +66,7 @@ Email: <strong><a href="mailto:kdnanderson94@gmail.com" >Kdnanderson94@gmail.com
 <footer class="main-footer">
     
 <span>Khaydien Anderson
-<a href="#top">Back to top</a></span>
+<a class ="backtotop"href="#top">Back to top</a></span>
 
 <ul class="bottom-nav"><li class="nav"><a href ="#contact-id">Contact</a></li>
     <li class="nav"><a href ="#portfolio-id" >Portfolio</a></li>
