--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Project 2</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Mate+SC&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/normalize.css">
 </head>
@@ -55,6 +57,12 @@
 </div> <!-- portfolio closing tag-->
 </div> <!--portfolio container closing tag-->
 
+<div class="skills" id="skills-id">
+    <h2>Skills</h2>
+    <p>As well as web development I have a huge interest in sound design and technology. I have much experience dealing with analogue and digital gear plug ins. I mix projects that range from hip hop singles and albums to sports podcasts. To book my services please check me out:<br> <a href="mixedbykdn.com">MixedByKdn.com</a></p>
+    <img class="studio" src="images/studiopic.jpg" alt="Studio image.">
+</div>
+
 <div class="contact" id="contact-id">
 <h2 class="title"> Contact</h2>
 <p>If you're interested in chatting or want more information about what I've been working on, I'd love to hear from you! <br> <br>
@@ -66,11 +74,14 @@ Email: <strong><a href="mailto:kdnanderson94@gmail.com" >Kdnanderson94@gmail.com
 <footer class="main-footer">
     
 <span>Khaydien Anderson
-<a class ="backtotop"href="#top">Back to top</a></span>
+<a class ="backtotop" href="#top">Back to top</a></span>
 
-<ul class="bottom-nav"><li class="nav"><a href ="#contact-id">Contact</a></li>
+<ul class="bottom-nav">
+    <li class="nav"><a href =#skills-id>Skills</a></li>
+    <li class="nav"><a href ="#contact-id">Contact</a></li>
     <li class="nav"><a href ="#portfolio-id" >Portfolio</a></li>
-    <li class="nav"><a href ="index.html">Home</a></li></ul>
+    <li class="nav"><a href ="index.html">Home</a></li>
+</ul>
 
 </footer>
 </body>
