--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
                 <div class="container">
-                    <h1 class="name">Student Name</h1><nav>
+                    <h1 class="name">Khaydien Anderson</h1><nav>
                     <ul class="main-nav"><li class="nav"><a href ="index.html" >Home</a></li>
                         <li class="nav"><a href ="#portfolio-id" >Portfolio</a></li>
                         <li class="nav"><a href ="#contact-id">Contact</a></li></ul></nav>
