--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 <div class="skills" id="skills-id">
     <h2>Skills</h2>
-    <p>As well as web development I have a huge interest in sound design and technology. I have much experience dealing with analogue and digital gear plug ins. I mix projects that range from hip hop singles and albums to sports podcasts. To book my services please check me out:<br> <a href="mixedbykdn.com">MixedByKdn.com</a></p>
+    <p>As well as web development I have a huge interest in sound design and technology. I have much experience dealing with analogue and digital gear plug ins. I mix projects that range from hip hop singles and albums to sports podcasts. To book my services please check me out:<br> <a href="www.mixedbykdn.com" target ="_blank">MixedByKdn.com</a></p>
     <img class="studio" src="images/studiopic.jpg" alt="Studio image.">
 </div>
 
