Reviewed notes. Fixed skills + portfolio buttons

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
                     <h1 class="name">Khaydien Anderson</h1><nav>
                     <ul class="main-nav"><li class="nav"><a href ="index.html" >Home</a></li>
                         <li class="nav"><a href ="#portfolio-id" >Portfolio</a></li>
-                        <li class="nav"><a href ="#contact-id">Contact</a></li></ul></nav>
+                        <li class="nav"><a href ="#skills-id">Skills</a></li>
+                        <li class="nav"><a href ="#contact-id">Contact</a></li>
+                    </ul></nav>
                     </div>
                     <div class="intro">
                 <img class="intro-picture" src="images/responsive-layout-profile.png" alt="Profile picture">
@@ -26,7 +28,7 @@
             </div>
         </header>
 <main>
-    <div class="portfolio-container">
+    <div class="portfolio-container" id="portfolio-id">
         <h2 class="title" >Portfolio</h2>
     <div class="portfolio">
         
@@ -77,8 +79,8 @@ Email: <strong><a href="mailto:kdnanderson94@gmail.com" >Kdnanderson94@gmail.com
 <a class ="backtotop" href="#top">Back to top</a></span>
 
 <ul class="bottom-nav">
-    <li class="nav"><a href =#skills-id>Skills</a></li>
     <li class="nav"><a href ="#contact-id">Contact</a></li>
+    <li class="nav"><a href =#skills-id>Skills</a></li>
     <li class="nav"><a href ="#portfolio-id" >Portfolio</a></li>
     <li class="nav"><a href ="index.html">Home</a></li>
 </ul>
